--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "colab": {
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "colab": {
@@ -159,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "colab": {
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "colab": {
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "colab": {
@@ -275,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "colab": {
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "colab": {
@@ -338,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "colab": {
@@ -381,14 +381,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 22,
       "metadata": {
         "collapsed": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LF3gDJZGygYT",
-        "outputId": "a0b3a70b-6009-4da9-9753-625013475643"
+        "outputId": "d6d2535e-1923-4eb7-c99b-eb1594e5a765"
       },
       "outputs": [
         {
@@ -402,34 +402,39 @@
       "source": [
         "# Method 1:\n",
         "my_list = [0,0,0]\n",
-        "print(my_list)\n"
+        "print(my_list)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 21,
       "metadata": {
         "collapsed": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9H1k0BmZygYT",
-        "outputId": "aac2470e-3240-4750-e5b2-0c10254d082b"
+        "outputId": "69f05335-7e5c-46a6-be60-fcdabb120e9d"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "unmatched ']' (ipython-input-1542161036.py, line 2)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-1542161036.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    m = [0,0,0]]\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ']'\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 0, 0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ],
       "source": [
         "# Method 2:\n",
-        "m = [0,0,0]\n",
-        "m"
+        "my_list=[]\n",
+        "my_list.append(0)\n",
+        "my_list.append(0)\n",
+        "my_list.append(0)\n",
+        "my_list"
       ]
     },
     {
@@ -443,15 +448,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "collapsed": true,
-        "id": "znFcxAs-ygYU"
+        "id": "znFcxAs-ygYU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5aed7aa8-6056-434c-98f2-c8df81f848b6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, [3, 4, 'goodbye']]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ],
       "source": [
         "list3 = [1,2,[3,4,'hello']]\n",
-        "\n"
+        "\n",
+        "list3[2][2]='goodbye'\n",
+        "list3"
       ]
     },
     {
@@ -465,15 +487,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "collapsed": true,
-        "id": "fD0Cfu_RygYU"
+        "id": "fD0Cfu_RygYU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bda0bc9e-ce4d-4069-ef7e-a47f4644d146"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 4, 5, 6]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ],
       "source": [
         "list4 = [5,3,4,6,1]\n",
-        "\n"
+        "\n",
+        "list4.sort()\n",
+        "list4"
       ]
     },
     {
@@ -496,56 +535,122 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "collapsed": true,
-        "id": "XQynxHW_ygYU"
+        "id": "XQynxHW_ygYU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e76c14e6-2cbc-496c-a182-b192f44b2fbe"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'hello'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ],
       "source": [
         "d = {'simple_key':'hello'}\n",
-        "# Grab 'hello'\n"
+        "# Grab 'hello'\n",
+        "d['simple_key']"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "collapsed": true,
-        "id": "bGgIoJ64ygYU"
+        "id": "bGgIoJ64ygYU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6ed340b-a555-4873-d4b1-07860d42942a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'hello'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ],
       "source": [
         "d = {'k1':{'k2':'hello'}}\n",
-        "# Grab 'hello'\n"
+        "# Grab 'hello'\n",
+        "d['k1']['k2']"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "collapsed": true,
-        "id": "DZnHwRnAygYU"
+        "id": "DZnHwRnAygYU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9c678555-b56c-470d-80cc-c02bde46c81e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
+          ]
+        }
+      ],
       "source": [
         "# Getting a little tricker\n",
         "d = {'k1':[{'nest_key':['this is deep',['hello']]}]}\n",
         "\n",
-        "#Grab hello\n"
+        "#Grab hello\n",
+        "print(d['k1'][0]['nest_key'][1][0])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "collapsed": true,
-        "id": "H6duVl0sygYU"
+        "id": "H6duVl0sygYU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "79637150-63ae-45d5-bb24-a1d2b4127e19"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
+          ]
+        }
+      ],
       "source": [
         "# This will be hard and annoying!\n",
-        "d = {'k1':[1,2,{'k2':['this is tricky',{'tough':[1,2,['hello']]}]}]}"
+        "d = {'k1':[1,2,{'k2':['this is tricky',{'tough':[1,2,['hello']]}]}]}\n",
+        "\n",
+        "#Grab hello\n",
+        "print(d['k1'][2]['k2'][1]['tough'][2][0])"
       ]
     },
     {
