--- a/02-Python Statements/05-Useful-Operators.ipynb
+++ b/02-Python Statements/05-Useful-Operators.ipynb
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "collapsed": true,
         "id": "CHdDe7wNM6tZ"
@@ -328,21 +328,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "FOW9j-H_M6tZ",
-        "outputId": "a21cb376-4b82-484d-e9f5-277830566ea5"
+        "outputId": "dd05ac4d-e4fe-44f1-a9f9-cf27ba83923c"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<zip at 0x1d205086f08>"
+              "<zip at 0x7b8f65ed8ec0>"
             ]
           },
-          "execution_count": 15,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 6
         }
       ],
       "source": [
@@ -352,21 +355,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "JvSfntDWM6tZ",
-        "outputId": "866ff214-e84b-4355-d9a2-18b6352491de"
+        "outputId": "c63f412e-264e-400d-a964-3741a3370814"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[(1, 'a'), (2, 'b'), (3, 'c'), (4, 'd'), (5, 'e')]"
             ]
           },
-          "execution_count": 17,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 7
         }
       ],
       "source": [
@@ -384,15 +390,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "j5P5CUaQM6ta",
-        "outputId": "a936d277-294a-40c0-d68e-ef1b24565845"
+        "outputId": "2444682d-fbaf-4aba-8b4b-2f1892372bd2"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "For this tuple, first item was 1 and second item was a\n",
             "For this tuple, first item was 2 and second item was b\n",
@@ -405,6 +414,34 @@
       "source": [
         "for item1, item2 in zip(mylist1,mylist2):\n",
         "    print('For this tuple, first item was {} and second item was {}'.format(item1,item2))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for item1, item2 in zip(mylist1,mylist2):\n",
+        "  print(f\"For this typle, the first item was {item1} and the second item was {item2}.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X9lX6Xr9ORaC",
+        "outputId": "31ee4a7b-3c6e-4db4-b832-0582e17312ab"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "For this typle, the first item was 1 and the second item was a.\n",
+            "For this typle, the first item was 2 and the second item was b.\n",
+            "For this typle, the first item was 3 and the second item was c.\n",
+            "For this typle, the first item was 4 and the second item was d.\n",
+            "For this typle, the first item was 5 and the second item was e.\n"
+          ]
+        }
       ]
     },
     {
@@ -721,28 +758,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
         "id": "_5m7CurzM6te",
-        "outputId": "14d322a9-a752-4262-b206-639a6838e58d"
+        "outputId": "c919a11f-3975-4e7f-9be7-50ec829dd2b3"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Enter Something into this box: great job!\n"
+            "Enter Something into this box: Something?\n"
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'great job!'"
-            ]
+              "'Something?'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "execution_count": 43,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 10
         }
       ],
       "source": [
