--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -1,201 +1,513 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "___\n",
-    "\n",
-    "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
-    "___\n",
-    "<center><em>Content Copyright by Pierian Data</em></center>"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yGAu4K3sPQo_"
+      },
+      "source": [
+        "___\n",
+        "\n",
+        "<a href='https://www.udemy.com/user/joseportilla/'><img src='https://github.com/joemaxwell-jbm/Complete-Python-3-Bootcamp/blob/master/Pierian_Data_Logo.png?raw=1'/></a>\n",
+        "___\n",
+        "<center><em>Content Copyright by Pierian Data</em></center>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "collapsed": true,
+        "id": "E3NiHZQPPQpB"
+      },
+      "source": [
+        "# Statements Assessment Test\n",
+        "Let's test your knowledge!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pZewXpWUPQpB"
+      },
+      "source": [
+        "_____\n",
+        "**Use <code>for</code>, .split(), and <code>if</code> to create a Statement that will print out words that start with 's':**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "collapsed": true,
+        "id": "JTclxrwzPQpC"
+      },
+      "outputs": [],
+      "source": [
+        "st = 'Print only the words that start with s in this sentence'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "st.split()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aKlsWbjBPphu",
+        "outputId": "621c19fa-d33a-46f7-f6ea-a95cdf789cf2"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Print',\n",
+              " 'only',\n",
+              " 'the',\n",
+              " 'words',\n",
+              " 'that',\n",
+              " 'start',\n",
+              " 'with',\n",
+              " 's',\n",
+              " 'in',\n",
+              " 'this',\n",
+              " 'sentence']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "collapsed": true,
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ihw2XrAPPQpC",
+        "outputId": "fd20345c-0d38-4d73-9082-3bb8ccd7251c"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "start\n",
+            "s\n",
+            "sentence\n"
+          ]
+        }
+      ],
+      "source": [
+        "for word in st.split():\n",
+        "  if word[0] == 's':\n",
+        "    print(word)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QsSfx9tTPQpD"
+      },
+      "source": [
+        "______\n",
+        "**Use range() to print all the even numbers from 0 to 10.**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "collapsed": true,
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kq4R1o4-PQpE",
+        "outputId": "610c002a-c6b4-4b2c-d161-99f8972039ff"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 2, 4, 6, 8, 10]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ],
+      "source": [
+        "list(range(0,11,2))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4NYDV6EDPQpE"
+      },
+      "source": [
+        "___\n",
+        "**Use a List Comprehension to create a list of all numbers between 1 and 50 that are divisible by 3.**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "collapsed": true,
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cGPDahJQPQpF",
+        "outputId": "f1468e3d-866f-45f4-c4e1-58c440c23ed9"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ],
+      "source": [
+        "list(x for x in range(1,51) if x % 3 == 0)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rrfZNiUSPQpH"
+      },
+      "source": [
+        "_____\n",
+        "**Go through the string below and if the length of a word is even print \"even!\"**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "collapsed": true,
+        "id": "fzZ_InRdPQpH"
+      },
+      "outputs": [],
+      "source": [
+        "st = 'Print every word in this sentence that has an even number of letters'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "collapsed": true,
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yoqScIzQPQpI",
+        "outputId": "1484f7d4-0ce4-4350-e771-8a4a06a5d7f7"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "word\n",
+            "in\n",
+            "this\n",
+            "sentence\n",
+            "that\n",
+            "an\n",
+            "even\n",
+            "number\n",
+            "of\n"
+          ]
+        }
+      ],
+      "source": [
+        "for word in st.split():\n",
+        "  if len(word) % 2 == 0:\n",
+        "    print(word)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4gogabtxPQpI"
+      },
+      "source": [
+        "____\n",
+        "**Write a program that prints the integers from 1 to 100. But for multiples of three print \"Fizz\" instead of the number, and for the multiples of five print \"Buzz\". For numbers which are multiples of both three and five print \"FizzBuzz\".**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "collapsed": true,
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-wdfeTlPPQpI",
+        "outputId": "94b78091-8f32-4db3-ce03-52b75526c13e"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "Fizz\n",
+            "4\n",
+            "Buzz\n",
+            "Fizz\n",
+            "7\n",
+            "8\n",
+            "Fizz\n",
+            "Buzz\n",
+            "11\n",
+            "Fizz\n",
+            "13\n",
+            "14\n",
+            "FizzBuzz\n",
+            "16\n",
+            "17\n",
+            "Fizz\n",
+            "19\n",
+            "Buzz\n",
+            "Fizz\n",
+            "22\n",
+            "23\n",
+            "Fizz\n",
+            "Buzz\n",
+            "26\n",
+            "Fizz\n",
+            "28\n",
+            "29\n",
+            "FizzBuzz\n",
+            "31\n",
+            "32\n",
+            "Fizz\n",
+            "34\n",
+            "Buzz\n",
+            "Fizz\n",
+            "37\n",
+            "38\n",
+            "Fizz\n",
+            "Buzz\n",
+            "41\n",
+            "Fizz\n",
+            "43\n",
+            "44\n",
+            "FizzBuzz\n",
+            "46\n",
+            "47\n",
+            "Fizz\n",
+            "49\n",
+            "Buzz\n",
+            "Fizz\n",
+            "52\n",
+            "53\n",
+            "Fizz\n",
+            "Buzz\n",
+            "56\n",
+            "Fizz\n",
+            "58\n",
+            "59\n",
+            "FizzBuzz\n",
+            "61\n",
+            "62\n",
+            "Fizz\n",
+            "64\n",
+            "Buzz\n",
+            "Fizz\n",
+            "67\n",
+            "68\n",
+            "Fizz\n",
+            "Buzz\n",
+            "71\n",
+            "Fizz\n",
+            "73\n",
+            "74\n",
+            "FizzBuzz\n",
+            "76\n",
+            "77\n",
+            "Fizz\n",
+            "79\n",
+            "Buzz\n",
+            "Fizz\n",
+            "82\n",
+            "83\n",
+            "Fizz\n",
+            "Buzz\n",
+            "86\n",
+            "Fizz\n",
+            "88\n",
+            "89\n",
+            "FizzBuzz\n",
+            "91\n",
+            "92\n",
+            "Fizz\n",
+            "94\n",
+            "Buzz\n",
+            "Fizz\n",
+            "97\n",
+            "98\n",
+            "Fizz\n",
+            "Buzz\n"
+          ]
+        }
+      ],
+      "source": [
+        "for number in range(1,101):\n",
+        "  if number % 3 == 0 and number % 5 == 0:\n",
+        "    print(\"FizzBuzz\")\n",
+        "  elif number % 3 == 0:\n",
+        "    print(\"Fizz\")\n",
+        "  elif number % 5 == 0:\n",
+        "    print(\"Buzz\")\n",
+        "  else:\n",
+        "    print(number)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t-fmg4F5PQpI"
+      },
+      "source": [
+        "____\n",
+        "**Use List Comprehension to create a list of the first letters of every word in the string below:**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "collapsed": true,
+        "id": "jCQL4zXyPQpJ"
+      },
+      "outputs": [],
+      "source": [
+        "st = 'Create a list of the first letters of every word in this string'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {
+        "collapsed": true,
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MxAIZvU-PQpJ",
+        "outputId": "758a9535-1345-4a58-c193-4a3e5c6e26a3"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ],
+      "source": [
+        "#Code in this cell\n",
+        "[word[0] for word in st.split()]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[print(word[0]) for word in st.split()]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2RW1UJJhR2tu",
+        "outputId": "cd204bde-3846-4ed5-b3d6-f07c165b9f82"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "C\n",
+            "a\n",
+            "l\n",
+            "o\n",
+            "t\n",
+            "f\n",
+            "l\n",
+            "o\n",
+            "e\n",
+            "w\n",
+            "i\n",
+            "t\n",
+            "s\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[None, None, None, None, None, None, None, None, None, None, None, None, None]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oiJzALD1PQpK"
+      },
+      "source": [
+        "### Great Job!"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.6.6"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "# Statements Assessment Test\n",
-    "Let's test your knowledge!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "_____\n",
-    "**Use <code>for</code>, .split(), and <code>if</code> to create a Statement that will print out words that start with 's':**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "st = 'Print only the words that start with s in this sentence'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "______\n",
-    "**Use range() to print all the even numbers from 0 to 10.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Code Here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "___\n",
-    "**Use a List Comprehension to create a list of all numbers between 1 and 50 that are divisible by 3.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Code in this cell\n",
-    "[]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "_____\n",
-    "**Go through the string below and if the length of a word is even print \"even!\"**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "st = 'Print every word in this sentence that has an even number of letters'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Code in this cell"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "____\n",
-    "**Write a program that prints the integers from 1 to 100. But for multiples of three print \"Fizz\" instead of the number, and for the multiples of five print \"Buzz\". For numbers which are multiples of both three and five print \"FizzBuzz\".**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Code in this cell"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "____\n",
-    "**Use List Comprehension to create a list of the first letters of every word in the string below:**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "st = 'Create a list of the first letters of every word in this string'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Code in this cell"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Great Job!"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
